# jiarenqiuzhi

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
src/job_bot/: __init__.py  a2a.py  cli.py  engine.py  matcher.py  models.py  qa.py
tests/: test_matcher_qa_a2a.py
