[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-auto-apply-agent"
version = "0.1.0"
description = "Playwright + A2A-ready auto apply agent"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.48.0",
  "PyYAML>=6.0.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
